<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		newscenecreator
	 *	@date 		Wednesday 26th of April 2023 10:42:12 AM
	 *	@title 		Add Scene
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/newscenecreator" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_newscenecreator_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp">

				<TextView
					android:id="@+id/new_scene"
					android:layout_width="135dp"
					android:layout_height="38dp"
					android:layout_above="@+id/rectangle_8"
					android:layout_marginStart="156dp"
					android:layout_marginTop="12dp"
					android:layout_marginBottom="-50dp"
					android:text="@string/new_scene_string"
					android:textColor="@color/new_scene_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/set_scene_duration"
					android:layout_width="211dp"
					android:layout_height="38dp"
					android:layout_alignStart="@+id/rectangle_5"
					android:layout_marginStart="5dp"
					android:layout_marginTop="166dp"
					android:text="@string/set_scene_duration_string"
					android:textColor="@color/new_scene_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<View
					android:id="@+id/rectangle_5"
					android:layout_width="386dp"
					android:layout_height="304dp"
					android:layout_marginStart="22dp"
					android:layout_marginTop="203dp"
					android:background="@drawable/rectangle_5_shape" />

				<View
					android:id="@+id/rectangle_9"
					android:layout_width="386dp"
					android:layout_height="68dp"
					android:layout_marginStart="22dp"
					android:layout_marginTop="532dp"
					android:background="@drawable/rectangle_9_shape" />

				<View
					android:id="@+id/rectangle_10"
					android:layout_width="386dp"
					android:layout_height="68dp"
					android:layout_marginStart="22dp"
					android:layout_marginTop="628dp"
					android:background="@drawable/rectangle_10_shape" />

				<TextView
					android:id="@+id/play_music"
					android:layout_width="131dp"
					android:layout_height="38dp"
					android:layout_alignStart="@+id/rectangle_10"
					android:layout_alignTop="@+id/rectangle_10"
					android:layout_marginStart="31dp"
					android:layout_marginTop="20dp"
					android:text="@string/play_music_string"
					android:textColor="@color/new_scene_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/rectangle_7"
					android:layout_width="214dp"
					android:layout_height="77dp"
					android:layout_alignBottom="@+id/rectangle_5"
					android:layout_marginStart="23dp"
					android:layout_marginTop="265dp"
					android:layout_marginBottom="85dp"
					android:layout_toEndOf="@+id/end"
					android:contentDescription="@string/rectangle_7"
					android:src="@drawable/rectangle_7" />

				<TextView
					android:id="@+id/__"
					android:layout_width="44dp"
					android:layout_height="45dp"
					android:layout_marginStart="242dp"
					android:layout_marginTop="360dp"
					android:text="@string/___string"
					android:textColor="@color/new_scene_color"
					android:textSize="30sp"
					android:textStyle="bold" />

				<View
					android:id="@+id/rectangle_6"
					android:layout_width="214dp"
					android:layout_height="77dp"
					android:layout_alignBottom="@+id/rectangle_5"
					android:layout_marginStart="18dp"
					android:layout_marginTop="151dp"
					android:layout_marginBottom="197dp"
					android:layout_toEndOf="@+id/start"
					android:background="@drawable/rectangle_6_shape" />

				<TextView
					android:id="@+id/___ek1"
					android:layout_width="44dp"
					android:layout_height="45dp"
					android:layout_marginStart="242dp"
					android:layout_marginTop="247dp"
					android:text="@string/___ek1_string"
					android:textColor="@color/new_scene_color"
					android:textSize="30sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/start"
					android:layout_width="74dp"
					android:layout_height="38dp"
					android:layout_marginStart="52dp"
					android:layout_marginTop="247dp"
					android:text="@string/start_string"
					android:textColor="@color/new_scene_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/end"
					android:layout_width="63dp"
					android:layout_height="38dp"
					android:layout_marginStart="58dp"
					android:layout_marginTop="355dp"
					android:text="@string/end_string"
					android:textColor="@color/new_scene_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<View
					android:id="@+id/rectangle_8"
					android:layout_width="203dp"
					android:layout_height="53dp"
					android:layout_marginStart="115dp"
					android:layout_marginTop="78dp"
					android:background="@drawable/rectangle_8_shape" />

				<ImageView
					android:id="@+id/border_color"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_marginStart="279dp"
					android:layout_marginTop="92dp"
					android:contentDescription="@string/border_color"
					android:src="@drawable/border_color" />

				<TextView
					android:id="@+id/set_security"
					android:layout_width="148dp"
					android:layout_height="38dp"
					android:layout_alignStart="@+id/rectangle_9"
					android:layout_alignTop="@+id/rectangle_9"
					android:layout_marginStart="28dp"
					android:layout_marginTop="16dp"
					android:text="@string/set_security_string"
					android:textColor="@color/new_scene_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<Button
					android:id="@+id/monButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignStart="@+id/rectangle_5"
					android:layout_alignBottom="@+id/rectangle_5"
					android:layout_marginStart="10dp"
					android:layout_marginTop="451dp"
					android:layout_marginEnd="11dp"
					android:layout_marginBottom="8dp"
					android:background="@drawable/ellipse_1_shape"
					android:text="@string/monday" />

				<Button
					android:id="@+id/wedButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignBottom="@+id/tueButton"
					android:layout_marginStart="5dp"
					android:layout_marginTop="451dp"
					android:layout_marginBottom="0dp"
					android:layout_toEndOf="@+id/tueButton"
					android:background="@drawable/ellipse_3_shape"
					android:text="@string/wednesday" />

				<Button
					android:id="@+id/thuButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignBottom="@+id/wedButton"
					android:layout_marginStart="188dp"
					android:layout_marginTop="451dp"
					android:layout_marginBottom="0dp"
					android:background="@drawable/ellipse_4_shape"
					android:text="@string/thursday" />

				<Button
					android:id="@+id/tueButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignBottom="@+id/monButton"
					android:layout_marginStart="-5dp"
					android:layout_marginTop="451dp"
					android:layout_marginBottom="0dp"
					android:layout_toEndOf="@+id/monButton"
					android:background="@drawable/ellipse_2_shape"
					android:text="@string/tuesday" />

				<Button
					android:id="@+id/satButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignBottom="@+id/friButton"
					android:layout_marginStart="5dp"
					android:layout_marginTop="451dp"
					android:layout_marginBottom="0dp"
					android:layout_toEndOf="@+id/friButton"
					android:background="@drawable/ellipse_5_shape"
					android:text="@string/saturday" />

				<Button
					android:id="@+id/sunButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignBottom="@+id/satButton"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="10dp"
					android:layout_marginTop="451dp"
					android:layout_marginEnd="10dp"
					android:layout_marginBottom="0dp"
					android:background="@drawable/ellipse_6_shape"
					android:text="@string/sunday" />

				<Button
					android:id="@+id/friButton"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_alignBottom="@+id/thuButton"
					android:layout_marginStart="5dp"
					android:layout_marginTop="451dp"
					android:layout_marginBottom="0dp"
					android:layout_toEndOf="@+id/thuButton"
					android:background="@drawable/ellipse_7_shape"
					android:text="@string/friday" />

				<Button
					android:id="@+id/rectangle_11"
					android:layout_width="141dp"
					android:layout_height="57dp"
					android:layout_marginStart="138dp"
					android:layout_marginTop="737dp"
					tools:text="save" />

				<Switch
					android:id="@+id/setSecuritySwitch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBottom="@+id/rectangle_9"
					android:layout_marginStart="130dp"
					android:layout_marginBottom="21dp"
					android:layout_toEndOf="@+id/set_security"
					android:scaleX="2"
					android:scaleY="2"
					tools:ignore="UseSwitchCompatOrMaterialXml" />

				<Switch
					android:id="@+id/playMusicSwitch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBottom="@+id/rectangle_10"
					android:layout_marginStart="145dp"
					android:layout_marginBottom="18dp"
					android:layout_toEndOf="@+id/play_music"
					android:scaleX="2"
					android:scaleY="2"
					tools:ignore="UseSwitchCompatOrMaterialXml" />

				<EditText
					android:id="@+id/sceneNameTextInput"
					android:layout_width="200dp"
					android:layout_height="59dp"
					android:layout_alignEnd="@+id/rectangle_8"
					android:layout_alignBottom="@+id/rectangle_8"
					android:layout_marginEnd="2dp"
					android:layout_marginBottom="-2dp"
					android:ems="10"
					android:inputType="text"
					android:hint="@string/scene_name"
					android:autofillHints="Scene1" />

				<EditText
					android:id="@+id/startTimeText"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_alignEnd="@+id/rectangle_6"
					android:layout_alignBottom="@+id/rectangle_6"
					android:layout_marginEnd="2dp"
					android:layout_marginBottom="15dp"
					android:ems="10"
					android:inputType="time"
					tools:hint="@string/time"
					android:autofillHints="Time" />

				<EditText
					android:id="@+id/endTimeText"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_alignEnd="@+id/rectangle_7"
					android:layout_alignBottom="@+id/rectangle_7"
					android:layout_marginEnd="2dp"
					android:layout_marginBottom="15dp"
					android:ems="10"
					android:inputType="time"
					android:hint="@string/time"
					android:autofillHints="Time" />

				<ImageButton
					android:id="@+id/backButtonNewScene"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:layout_alignBottom="@+id/new_scene"
					android:layout_marginEnd="-50dp"
					android:layout_marginBottom="-4dp"
					android:layout_toStartOf="@+id/new_scene"
					android:backgroundTint="#00FFFFFF"
					android:contentDescription="@string/backbutton"
					app:srcCompat="@drawable/reply" />

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>