<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		homescreen
	 *	@date 		Thursday 27th of April 2023 04:16:55 PM
	 *	@title 		Home Screen
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/homescreen" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_homescreen_ek1"
				android:layout_width="395dp"
				android:layout_height="match_parent"
				android:layout_marginStart="0dp">


				<View
					android:id="@+id/_bg__homescreen_ek2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__homescreen_ek2_shape" />


				<View
					android:id="@+id/rectangle_21"
					android:layout_width="192dp"
					android:layout_height="146dp"
					android:layout_below="@+id/_bg__homescreen_ek2"
					android:layout_alignParentStart="true"
					android:layout_marginStart="203dp"
					android:layout_marginTop="156dp"
					android:alpha="0.50999999046326"
					android:background="@drawable/rectangle_21_shape" />

				<View
					android:id="@+id/rectangle_81"
					android:layout_width="189dp"
					android:layout_height="144dp"
					android:layout_below="@+id/_bg__homescreen_ek2"
					android:layout_alignParentStart="true"
					android:layout_marginStart="5dp"
					android:layout_marginTop="158dp"
					android:alpha="0.50999999046326"
					android:background="@drawable/rectangle_81_shape" />

				<View
					android:id="@+id/rectangle_51"
					android:layout_width="264dp"
					android:layout_height="213dp"
					android:layout_below="@+id/_bg__homescreen_ek2"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="67dp"
					android:layout_marginTop="333dp"
					android:layout_marginEnd="64dp"
					android:alpha="0.34000000357628"
					android:background="@drawable/rectangle_51_shape" />

				<TextView
					android:id="@+id/remotely_disable_your_alarm"
					android:layout_width="242dp"
					android:layout_height="34dp"
					android:layout_alignStart="@+id/rectangle_51"
					android:layout_alignTop="@+id/rectangle_51"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="105dp"
					android:layout_marginTop="117dp"
					android:gravity="center"
					android:text="@string/remotely_disable_your_alarm_string"
					android:textColor="@color/remotely_disable_your_alarm_color"
					android:textSize="12sp"
					android:textStyle="bold" />

				<Button
					android:id="@+id/rectangle_41"
					android:layout_width="116dp"
					android:layout_height="48dp"
					android:layout_alignEnd="@+id/rectangle_81"
					android:layout_alignBottom="@+id/rectangle_81"
					android:layout_marginStart="53dp"
					android:layout_marginTop="395dp"
					android:layout_marginEnd="31dp"
					android:layout_marginBottom="9dp"
					android:background="@drawable/rectangle_41_shape"
					android:text="manage scenes"
					android:textSize="10sp" />

				<Button
					android:id="@+id/rectangle_61"
					android:layout_width="148dp"
					android:layout_height="48dp"
					android:layout_alignStart="@+id/rectangle_51"
					android:layout_alignTop="@+id/rectangle_51"
					android:layout_marginStart="55dp"
					android:layout_marginTop="156dp"
					android:background="@drawable/rectangle_61_shape"
					android:text="disable alarm"
					android:textSize="12sp" />

				<TextView
					android:id="@+id/create_a_scene_that_controls_your_home4u_device_"
					android:layout_width="182dp"
					android:layout_height="30dp"
					android:layout_alignBottom="@+id/rectangle_81"
					android:layout_alignParentStart="true"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="13dp"
					android:layout_marginLeft="28dp"
					android:layout_marginTop="366dp"
					android:layout_marginBottom="62dp"
					android:gravity="center"
					android:text="@string/create_a_scene_that_controls_your_home4u_device__string"
					android:textColor="@color/remotely_disable_your_alarm_color"
					android:textSize="12sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/connect_your_phone_to_the_device_and_play_music"
					android:layout_width="180dp"
					android:layout_height="wrap_content"
					android:layout_alignStart="@+id/rectangle_21"
					android:layout_alignTop="@+id/rectangle_21"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="3dp"
					android:layout_marginLeft="233dp"
					android:layout_marginTop="56dp"
					android:gravity="center"
					android:text="Connect your phone to the device and play music"
					android:textColor="@color/remotely_disable_your_alarm_color"
					android:textSize="12sp"
					android:textStyle="bold" />


				<Button
					android:id="@+id/rectangle_31"
					android:layout_width="109dp"
					android:layout_height="48dp"
					android:layout_alignStart="@+id/rectangle_21"
					android:layout_alignTop="@+id/rectangle_21"
					android:layout_marginStart="38dp"
					android:layout_marginTop="88dp"
					android:background="@drawable/rectangle_31_shape"
					android:text="@string/play_music_string"
					android:textSize="10sp" />

				<ImageView
					android:id="@+id/media_bluetooth_on"
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:layout_alignStart="@+id/rectangle_21"
					android:layout_alignTop="@+id/rectangle_21"
					android:layout_marginStart="79dp"
					android:layout_marginTop="11dp"
					android:contentDescription="media_bluetooth_on"
					android:src="@drawable/media_bluetooth_on" />

				<ImageView
					android:id="@+id/alarm_off"
					android:layout_width="50dp"
					android:layout_height="47.17dp"
					android:layout_alignStart="@+id/rectangle_51"
					android:layout_alignTop="@+id/rectangle_51"
					android:layout_marginStart="106dp"
					android:layout_marginTop="5dp"
					android:contentDescription="alarm_off"
					android:src="@drawable/alarm_off" />

				<ImageView
					android:id="@+id/router"
					android:layout_width="39.27dp"
					android:layout_height="40.31dp"
					android:layout_alignStart="@+id/rectangle_81"
					android:layout_alignTop="@+id/rectangle_81"
					android:layout_alignEnd="@+id/rectangle_81"
					android:layout_marginStart="78dp"
					android:layout_marginTop="9dp"
					android:layout_marginEnd="74dp"
					android:contentDescription="router"
					android:src="@drawable/router" />

				<TextView
					android:id="@+id/home4u"
					android:layout_width="217dp"
					android:layout_height="52dp"
					android:layout_below="@+id/_bg__homescreen_ek2"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="98dp"
					android:layout_marginLeft="133dp"
					android:layout_marginTop="53dp"
					android:layout_marginEnd="80dp"
					android:text="@string/home4u_string"
					android:textColor="@color/remotely_disable_your_alarm_color"
					android:textSize="40sp"
					android:textStyle="bold" />

				<View
					android:id="@+id/rectangle_91"
					android:layout_width="440dp"
					android:layout_height="92dp"
					android:layout_below="@+id/rectangle_51"
					android:layout_marginStart="0dp"
					android:layout_marginTop="25dp"
					android:background="@drawable/rectangle_91_shape" />

				<View
					android:id="@+id/rectangle_110"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_below="@+id/rectangle_51"
					android:layout_marginStart="8dp"
					android:layout_marginTop="30dp"
					android:background="@drawable/rectangle_110_shape" />

				<TextView
					android:id="@+id/song_name"
					android:layout_width="77dp"
					android:layout_height="18dp"
					android:layout_alignBottom="@+id/rectangle_51"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="94dp"
					android:layout_marginBottom="-83dp"
					android:gravity="center"
					android:text="@string/song_name_string"
					android:textColor="@color/remotely_disable_your_alarm_color"
					android:textSize="12sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/artist_name"
					android:layout_width="80dp"
					android:layout_height="18dp"
					android:layout_below="@+id/rectangle_51"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="94dp"
					android:layout_marginTop="37dp"
					android:gravity="center"
					android:text="@string/artist_name_string"
					android:textColor="@color/remotely_disable_your_alarm_color"
					android:textSize="12sp"
					android:textStyle="bold" />

				<ImageButton
					android:id="@+id/play_arrow"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:layout_alignTop="@+id/rectangle_91"
					android:layout_marginStart="53dp"
					android:layout_marginTop="19dp"
					android:layout_toEndOf="@+id/song_name"
					android:contentDescription="play_arrow"
					android:src="@drawable/play_arrow" />

				<ImageButton
					android:id="@+id/pause"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:layout_alignTop="@+id/rectangle_91"
					android:layout_alignEnd="@+id/connect_your_phone_to_the_device_and_play_music"
					android:layout_marginStart="25dp"
					android:layout_marginTop="19dp"
					android:layout_marginEnd="20dp"
					android:layout_toEndOf="@+id/play_arrow"
					android:contentDescription="pause"
					android:src="@drawable/pause" />

				<Switch
					android:id="@+id/switch2"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_below="@+id/alarm_off"
					android:layout_alignEnd="@+id/rectangle_51"
					android:layout_marginTop="11dp"
					android:layout_marginEnd="25dp"
					android:text="Enable Security system"
					android:textOff="Off"
					android:textOn="On"
					android:textStyle="bold"/>

			</RelativeLayout>

			<ImageView android:id="@+id/album"
				android:src="@drawable/album"
				android:contentDescription="album"
				 android:layout_marginStart="-283dp"
				android:layout_marginTop="70dp"
				android:layout_width="50dp"
				android:layout_height="50dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>